exports[`buttons populates all active button selectors 1`] = `
Object {
  "button:active,
    input[type=\"button\"]:active,
    input[type=\"reset\"]:active,
    input[type=\"submit\"]:active": Object {
    "border-color": "black",
  },
}
`;

exports[`buttons populates all base button selectors 1`] = `
Object {
  "
    button,
    input[type=\"button\"],
    input[type=\"reset\"],
    input[type=\"submit\"]
    ": Object {
    "border-color": "black",
  },
}
`;

exports[`buttons populates all focus button selectors 1`] = `
Object {
  "button:focus,
    input[type=\"button\"]:focus,
    input[type=\"reset\"]:focus,
    input[type=\"submit\"]:focus": Object {
    "border-color": "black",
  },
}
`;

exports[`buttons populates all hover button selectors 1`] = `
Object {
  "button:hover,
    input[type=\"button\"]:hover,
    input[type=\"reset\"]:hover,
    input[type=\"submit\"]:hover": Object {
    "border-color": "black",
  },
}
`;

exports[`buttons populates both base button selectors and button selectors with a state 1`] = `
Object {
  "button,
    input[type=\"button\"],
    input[type=\"reset\"],
    input[type=\"submit\"]
    ,
    button:hover,
    input[type=\"button\"]:hover,
    input[type=\"reset\"]:hover,
    input[type=\"submit\"]:hover": Object {
    "border-color": "black",
  },
}
`;

exports[`buttons populates button selectors for two states 1`] = `
Object {
  "button:active,
    input[type=\"button\"]:active,
    input[type=\"reset\"]:active,
    input[type=\"submit\"]:active
    ,
    button:hover,
    input[type=\"button\"]:hover,
    input[type=\"reset\"]:hover,
    input[type=\"submit\"]:hover": Object {
    "border-color": "black",
  },
}
`;
